[add]Add MainFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Display Cutouts Sample</string>
+
+    <string name="button_caption_change_status_bar">Change Status Bar</string>
 </resources>
