[edit]Enable status bar toggle action

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Display Cutouts Sample</string>
 
+    <string name="sample_message">My wallet nai-wa.</string>
     <string name="button_caption_change_status_bar">Change Status Bar</string>
 </resources>
